[gd_scene load_steps=12 format=3 uid="uid://u4b0x654mum8"]

[ext_resource type="Script" uid="uid://bi2u2jaeiwlei" path="res://objects/brick.gd" id="1_xa1l3"]
[ext_resource type="SpriteFrames" uid="uid://dxfw1goxsfs3s" path="res://objects/Brick_overworld_4.tres" id="2_7nfhm"]
[ext_resource type="AudioStream" uid="uid://bsvn5rhfiq54t" path="res://assets/audio/SFX/Bump.wav" id="3_xa1l3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1jw1"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8iw1"]
size = Vector2(16, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xa1l3"]
size = Vector2(17.0714, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nfhm"]
size = Vector2(16, 1)

[sub_resource type="Animation" id="Animation_xa1l3"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8rhyp"]
resource_name = "bump_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 6), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 6), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_u8iw1"]
resource_name = "bump_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xa1l3"]
_data = {
&"RESET": SubResource("Animation_xa1l3"),
&"bump_down": SubResource("Animation_8rhyp"),
&"bump_up": SubResource("Animation_u8iw1")
}

[node name="Brick" type="AnimatableBody2D"]
collision_layer = 15
script = ExtResource("1_xa1l3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_7nfhm")
autoplay = "default"
frame_progress = 0.630201

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l1jw1")

[node name="JumpArea" type="Area2D" parent="."]

[node name="JumpCollision" type="CollisionShape2D" parent="JumpArea"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_u8iw1")

[node name="SideHitArea" type="Area2D" parent="."]
collision_mask = 5

[node name="SideHitCollision" type="CollisionShape2D" parent="SideHitArea"]
position = Vector2(-0.0375079, 0)
scale = Vector2(1.05, 0.98)
shape = SubResource("RectangleShape2D_xa1l3")

[node name="SFXBumped" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xa1l3")

[node name="PoundArea" type="Area2D" parent="."]

[node name="PoundCollision" type="CollisionShape2D" parent="PoundArea"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_7nfhm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xa1l3")
}

[connection signal="body_entered" from="JumpArea" to="." method="_on_jump_area_body_entered"]
[connection signal="body_entered" from="SideHitArea" to="." method="_on_side_hit_area_body_entered"]
[connection signal="body_entered" from="PoundArea" to="." method="_on_pound_area_body_entered"]
